fix notice icon missing background

--- a/packages/react/src/pages/User/Register.less
+++ b/packages/react/src/pages/User/Register.less
@@ -28,6 +28,7 @@
     float: right;
     line-height: @btn-height-lg;
   }
+
 }
 
 .success,
@@ -54,4 +55,9 @@
       background-color: @warning-color;
     }
   }
+}
+
+.demo{
+  padding: 20px;
+  background-color: red;
 }
